# ren-rex

./: README.md
.github/workflows/: deploy-rex-server.yml
client/: .env.example  .gitignore  DESIGN.md  README.md  next.config.ts  package.json  pnpm-lock.yaml
client/design-explorations/: _shared.css  a1-warm-paper.html  a2-pearl-indigo.html  a3-dark-mahogany.html  a4-sage-linen.html  index.html
client/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
client/src/app/analytics/: page.tsx
client/src/app/analytics/[subject]/: page.tsx
client/src/app/themes/: _design-system.css  sage-linen.css  warm-paper.css
client/src/components/: analytics-charts.tsx  facet-bar.tsx  pdf-viewer-loader.tsx  pdf-viewer.tsx  posthog-provider.tsx  rubric-cta-chip.tsx  search-panel.tsx  tip.tsx
client/src/components/ui/: chart.tsx  select.tsx
client/src/content/analytics/: gp.md  h2history.md  h2physics.md
client/src/data/analytics/: gp.json  h2history.json  h2physics.json
client/src/lib/: analytics-prose.ts  analytics.ts  pdf-match.ts  posthog-client.ts  rex.ts  seo.ts  subjects.ts  types.ts  use-facets.ts  utils.ts
docs/superpowers/plans/: 2026-05-15-rex-implementation.md  2026-06-08-related-files-answer-scheme.md
docs/superpowers/specs/: 2026-05-15-rex-pdf-search-server-design.md  2026-06-08-related-files-answer-scheme-design.md  2026-06-08-rex-server-ci-deploy-design.md
server/: .gitignore  Cargo.toml  README.md
server/crates/rex-api/: Cargo.toml
server/crates/rex-api/src/: error.rs  lib.rs  state.rs
server/crates/rex-api/src/handlers/: documents.rs  filter.rs  health.rs  mod.rs  pdfs.rs  search.rs  subjects.rs
server/crates/rex-cli/: Cargo.toml
server/crates/rex-cli/src/: cli.rs  commands.rs  main.rs  output.rs  wire.rs
server/crates/rex-domain/: Cargo.toml
server/crates/rex-domain/src/: document.rs  embedding.rs  error.rs  ids.rs  lib.rs  pdf.rs  ports.rs  search.rs
server/crates/rex-domain/tests/: types.rs
server/crates/rex-fs-local/: Cargo.toml
server/crates/rex-fs-local/src/: lib.rs
server/crates/rex-ingest/: Cargo.toml
server/crates/rex-ingest/src/: config.rs  error.rs  jsonl.rs  lib.rs  path_map.rs  pipeline.rs  stats.rs  text.rs  validate.rs
server/crates/rex-llamacpp/: Cargo.toml
server/crates/rex-llamacpp/src/: lib.rs  stub.rs
server/crates/rex-pdf/: Cargo.toml
server/crates/rex-pdf/src/: anchor.rs  extract.rs  lib.rs  ngram.rs
server/crates/rex-search/: Cargo.toml
server/crates/rex-search/src/: config.rs  fakes.rs  fusion.rs  highlights.rs  lib.rs  pipeline.rs  service.rs
server/crates/rex-search/tests/: pipeline_e2e.rs
server/crates/rex-sqlite/: Cargo.toml
server/crates/rex-sqlite/src/: conn.rs  lib.rs  schema.rs  sql.rs  store.rs
server/crates/rex-sqlite/tests/: store.rs
