[workspace]
resolver = "2"
members = [
    "crates/rex-domain",
    "crates/rex-search",
    "crates/rex-ingest",
    "crates/rex-pdf",
    "crates/rex-sqlite",
    "crates/rex-llamacpp",
    "crates/rex-fs-local",
    "crates/rex-api",
    "crates/rex-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["ren-rex team"]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
futures = "0.3"

# Storage
rusqlite = { version = "0.31", features = ["bundled", "serde_json", "vtab", "load_extension"] }

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit", "timeout", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"

# Observability
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
sysinfo = "0.30"

# Caching
lru = "0.12"

# Internal
rex-domain = { path = "crates/rex-domain" }
rex-search = { path = "crates/rex-search" }
rex-ingest = { path = "crates/rex-ingest" }
rex-pdf = { path = "crates/rex-pdf" }
rex-sqlite = { path = "crates/rex-sqlite" }
rex-llamacpp = { path = "crates/rex-llamacpp" }
rex-fs-local = { path = "crates/rex-fs-local" }
rex-api = { path = "crates/rex-api" }

[profile.release]
lto = "thin"
codegen-units = 1

# Workspace-wide clippy configuration. Each member crate opts in via
# `[lints] workspace = true`. `priority = -1` so individual lints can be
# downgraded at the default priority without conflicting.
[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
