[package]
name = "rex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
rex-domain.workspace = true
rex-search.workspace = true
rex-ingest.workspace = true
rex-pdf.workspace = true
rex-sqlite.workspace = true
rex-llamacpp.workspace = true
rex-fs-local.workspace = true
rex-api.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
indicatif.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
insta = "1"
