[package]
name = "rex-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rex-domain.workspace = true
rex-pdf.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["fs", "io-util", "rt", "macros"] }
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
