[package]
name = "rex-llamacpp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["stub"]
stub = []
# Real GGUF backend is gated to allow building without C++ deps.
gguf = []

[dependencies]
rex-domain.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
