[package]
name = "rex-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rex-domain.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
pdf-extract = "0.7"

[dev-dependencies]

[lints]
workspace = true
