[package]
name = "rex-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rex-domain.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["sync", "rt"] }
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"
